# mesh-optimizer

./: .env.example  .gitignore  BACKUP_DEPLOYMENT.md  CLAUDE.md  Caddyfile  Capabilities.md  Cargo.toml  Dockerfile  EXECUTIVE_SUMMARY.md  MCP_Plan.md  PRICING_STRATEGY.md  README.md  REVENUE_ANALYSIS.md  TODO.md  VALUE_PROPOSITION.md  backup_db.sh  deploy.sh  deploy_blog.sh  deploy_pricing.sh  future.md  git_review_overview.md  glTF Viewer.webloc  hardware.md  launch_prep.md  main.rs  readme_append_only_log.md  ship_html.sh  ship_pricing.sh
.github/workflows/: release-mcp.yml
backups/: database_20251204_155409.json
crates/api/: Cargo.toml  test_db.json
crates/api/src/: db.rs  main.rs  stats.rs
crates/mcp_server/: Cargo.toml  README.md
crates/mcp_server/src/: lib.rs  main.rs
crates/mcp_server/src/api/: client.rs  error.rs  mod.rs  types.rs
crates/mcp_server/src/config/: mod.rs
crates/mcp_server/src/files/: mod.rs  reader.rs  writer.rs
crates/mcp_server/src/server/: handler.rs  mod.rs
crates/mcp_server/src/tools/: balance.rs  batch.rs  mod.rs  optimize.rs  usage.rs
crates/mesh_worker/: Cargo.toml
crates/shared_db/: Cargo.toml
crates/shared_db/src/: lib.rs
crates/web_api/: Cargo.toml
crates/web_api/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
listmonk/: config.toml  docker-compose.yml
sample_test_files/: 08_organic_blob_opt.usdz  11_cube.gltf
scripts/: build-blog-index.js  build-help-index.js  create-key.sh  glb_to_usdz.py  install_blender_linux.sh  remesh.py  start.sh  test_remesh_local.sh
scripts/backup/: QUICKSTART.md  README.md  backup.sh  env-example.txt  health_check.sh  listmonk-backup.sh  listmonk-restore.sh  restore.sh  send_html_report.sh  send_report.sh  setup.sh  test_backup.sh  verify_backup.sh
scripts/reports/: adhoc_stats.sh  blender_health_check.sh  daily_metrics.sh  daily_stats.sh  new_user_report.sh
scripts/tools/: sketchfab_bulk_download.py  sketchfab_howto.md
server/: db.js  index.js  package-lock.json  package.json  pricing.json  processing_messages.json
server/public/: accessibility.html  contact.html  help-index.json  help.html  index.html  privacy-policy.html  privacy-summary.html  robots.txt  sitemap.xml
server/public/blog/: blog-index.json  convert-obj-to-glb.html  index.html  meshopt-vs-blender.html  meshopt-vs-instalod.html  meshopt-vs-rapidcompact.html  meshopt-vs-simplygon.html  optimize-3d-models-shopify-ar.html  reduce-glb-file-size.html  threejs-performance-optimization.html
server/public/blog/images/: readme_assets.md
server/public/css/: styles.css
server/public/js/: subscribe.js
server/public/tools/: glb-inspector.html  index.html  polygon-budget-calculator.html  texture-size-calculator.html
src/: main.rs
tests/: test_history_api.py  test_remesh_api.py
