[package]
name = "mesh-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & Web Server
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "tls-rustls"] }

# Utilities
anyhow = "1.0"
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Stripe
stripe = { package = "async-stripe", version = "0.38", features = ["runtime-tokio-hyper"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "multipart"] }
