[package]
name = "meshopt-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for MeshOpt 3D mesh optimization service"
authors = ["MeshOpt <support@webdeliveryengine.com>"]
license = "MIT"
repository = "https://github.com/meshopt/meshopt-mcp-server"
keywords = ["mcp", "mesh", "optimization", "3d", "glb"]
categories = ["command-line-utilities", "web-programming"]

[lib]
name = "meshopt_mcp"
path = "src/lib.rs"

[[bin]]
name = "meshopt-mcp-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
