[package]
name = "mesh-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
meshopt = "0.1.0"
tobj = "4.0"
anyhow = "1.0"
bytemuck = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gltf = "1.3"
fbxcel = "0.9"
fbxcel-dom = "0.0.10"
zip = "6.0.0"
image = "0.24"
